--- a/family.html
+++ b/family.html
@@ -82,28 +82,28 @@
             <p>These are my brothers and sisters. Click on us to learn more.</p>
         </div>
 
-        <div class="zeusInfo1 gInfo">
+        <div class="zeusInfo1 gInfo allZeusInfo">
             <p>Zeus was secretly raised in Crete by a goat named Amalthea! His father, Kronos, believed that he had eaten his 6th son, just as he had eaten the 5 that came before him. Prophecies told Kronos that he would be overthrown by one of his children, so he believed that the only way to avoid this fate was to swallow his new-borns whole.</p>
         </div>
 
-        <div class="zeusInfo2 gInfo">
-            <p>By the time Zeus was born, Zeus’ mum Rhea couldn’t watch her husband eat another one of her children. She tricked Kronos by giving him a baby-shaped rock to swallow instead and then snuck off to Crete to give birth to Zeus. And she raised him to take revenge on his dad.</p>
+        <div class="zeusInfo2 gInfo allZeusInfo">
+            <p>When Zeus was born, Zeus’ mum Rhea couldn’t watch her husband eat another one of her children. She tricked Kronos with a baby-shaped rock to swallow instead and then snuck off to Crete to give birth to Zeus. And she raised him to take revenge on his dad.</p>
         </div>
 
 
-        <div class="zeusInfo3 gInfo">
+        <div class="zeusInfo3 gInfo allZeusInfo">
             <p>When he turned 17 Zeus’ mum brought him back home. The shock of finding out his son was still alive led Kronos to feel very unwell, so unwell in fact that he vomited. And out of his mouth came the baby-shaped rock that Rhea had fed him 17 years ago – and that was not all!</p>
         </div>
 
 
 
-        <div class="zeusInfo4 gInfo">
+        <div class="zeusInfo4 gInfo allZeusInfo">
             <p>One by one Kronos vomited up the 5 children he had swallowed. First Hera, then Poseidon, Demeter, Hades and finally Hestia – all fully grown. A 10 year war then started and eventually the other side surrendered, leaving Zeus as King of the Gods.</p>
         </div>
 
 
 
-        <div class="zeusInfo5 gInfo">
+        <div class="zeusInfo5 gInfo allZeusInfo">
             <p>Zeus decided he wanted to form his own group of leaders, giving each of his siblings a role and sitting them beside him on Olympus. He decided 12 would be the perfect number of Olympians. He and his siblings made 5 as Hades did not count and the remaining spots were filled by some of Zeus’ children.</p>
         </div>
 
